fix for overflow issue

--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -103,6 +103,7 @@
   background: #fefefe;
   padding: 0;
   font-family: "Kodchasan", system-ui, Avenir, Helvetica, Arial, sans-serif;
+  overflow: hidden;
 }
 
 .flex-center {
